<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OtherFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?myMainBg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="?actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/telawat"
                    style="@style/Buttony"
                    android:background="@drawable/ripple_click"
                    android:drawableTop="@drawable/ic_headset"
                    android:elevation="@dimen/buttony_elevation"
                    android:text="@string/recitations" />

                <Button
                    android:id="@+id/quiz"
                    style="@style/Buttony"
                    android:background="@drawable/ripple_click"
                    android:drawableTop="@drawable/ic_quiz"
                    android:elevation="@dimen/buttony_elevation"
                    android:text="@string/quiz_title" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/hadeeth_books"
                    style="@style/Buttony"
                    android:background="@drawable/ripple_click"
                    android:drawableTop="@drawable/ic_books"
                    android:elevation="@dimen/buttony_elevation"
                    android:text="@string/hadeeth_books" />

                <Button
                    android:id="@+id/quran_searcher"
                    style="@style/Buttony"
                    android:background="@drawable/ripple_click"
                    android:drawableTop="@drawable/ic_quran_search"
                    android:elevation="@dimen/buttony_elevation"
                    android:text="@string/search_in_quran" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/channels"
                    style="@style/Buttony"
                    android:background="@drawable/ripple_click"
                    android:drawableTop="@drawable/ic_television"
                    android:elevation="@dimen/buttony_elevation"
                    android:text="@string/quran_and_hadeeth_channels" />

                <Button
                    android:id="@+id/settings"
                    style="@style/Buttony"
                    android:background="@drawable/ripple_click"
                    android:drawableTop="@drawable/ic_settings"
                    android:elevation="@dimen/buttony_elevation"
                    android:text="@string/settings" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/features"
                    style="@style/Buttony"
                    android:background="@drawable/ripple_click"
                    android:drawableTop="@drawable/ic_features"
                    android:elevation="@dimen/buttony_elevation"
                    android:text="@string/features_guide" />

                <Button
                    android:id="@+id/contact"
                    style="@style/Buttony"
                    android:background="@drawable/ripple_click"
                    android:drawableTop="@drawable/ic_mail"
                    android:elevation="@dimen/buttony_elevation"
                    android:text="@string/contact" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="15dp">

                <Button
                    android:id="@+id/share"
                    style="@style/Buttony"
                    android:background="@drawable/ripple_click"
                    android:drawableTop="@drawable/ic_share"
                    android:elevation="@dimen/buttony_elevation"
                    android:text="@string/share_app" />

                <Button
                    android:id="@+id/about"
                    style="@style/Buttony"
                    android:background="@drawable/ripple_click"
                    android:drawableTop="@drawable/ic_info"
                    android:elevation="@dimen/buttony_elevation"
                    android:text="@string/about" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>