<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?myMainBg"
    tools:context=".activities.RadioClient">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/MyTopBar">

        <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?myBars"
        android:contentDescription="@string/back_description"
        android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/top_bar_title"
            android:text="@string/quran_radio"
            style="@style/MyTopBarTv" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/holy_quran_radio"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/radio_pp_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar"/>

    <ImageButton
        android:id="@+id/radio_pp_btn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ripple_bg"
        android:contentDescription="@string/play_pause_btn_description"
        android:padding="10dp"
        android:src="@drawable/ic_player_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>