<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_corners_primary">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:gravity="center"
        android:text="@string/adjust_date"
        android:textSize="25dp"
        android:textStyle="bold"
        tools:ignore="SpUsage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/day_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="10dp"
        android:padding="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/previous_day_button_description"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/date_tv"
        app:layout_constraintBottom_toTopOf="@id/save_btn"/>

    <TextView
        android:id="@+id/offset_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:textSize="22dp"
        android:textColor="?myAccent"
        tools:ignore="SpUsage"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        app:layout_constraintStart_toEndOf="@id/day_back_btn"
        app:layout_constraintEnd_toStartOf="@id/day_forward_btn"
        app:layout_constraintBottom_toTopOf="@id/date_tv"/>

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:textSize="22dp"
        android:textStyle="bold"
        tools:ignore="SpUsage"
        app:layout_constraintTop_toBottomOf="@id/offset_tv"
        app:layout_constraintStart_toEndOf="@id/day_back_btn"
        app:layout_constraintEnd_toStartOf="@id/day_forward_btn"
        app:layout_constraintBottom_toTopOf="@id/save_btn"/>

    <ImageButton
        android:id="@+id/day_forward_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="10dp"
        android:padding="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/next_day_button_description"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        app:layout_constraintStart_toEndOf="@id/date_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/save_btn"/>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="40dp"
        android:background="@drawable/ripple_surface"
        android:fontFamily="@font/tajawal_regular"
        android:text="@string/save"
        android:textColor="?myActiveOnPrimary"
        android:textSize="25dp"
        tools:ignore="SpUsage"
        app:layout_constraintTop_toBottomOf="@id/date_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>